# RoboticLab-FinalProject

./: .gitignore  README.md  run_demo.sh
docs/: SETUP.md  duckiebot_migration.md  duckiebot_run.md
duckiebot/: duckiebot_pf_ros1.py  odom_republisher.py  run_robot.sh
pf_core/: __init__.py  motion_model.py  particle_filter.py  resampling.py  sensor_model.py  tag_map.py
pf_ros2/: package.xml  setup.cfg  setup.py
pf_ros2/launch/: duckiebot.launch.py  sim.launch.py
pf_ros2/pf_ros2/: apriltag_obs_node.py  keyboard_teleop.py  pf_node.py  viz_node.py
report/: README.md
rviz/: pf.rviz  pf_robot.rviz
simulation/: README.md  run.sh  teleop_key.py
simulation/launch/: .gitkeep
simulation/models/: .gitkeep
simulation/models/aruco_marker/: generate_marker.py  model.config  model.sdf
simulation/models/robot/: model.config  model.sdf
simulation/worlds/: .gitkeep  room.sdf
tests/: test_offline.py
visualization/: README.md  offline_demo.py
