<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pf_ros2</name>
  <version>0.0.0</version>
  <description>Thin ROS 2 Humble adapter around pf_core (particle filter localization).</description>
  <maintainer email="claudekullanirim@gmail.com">Nisa</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!-- AprilTag detection: apriltag_ros (or run detection inside apriltag_obs_node) -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
